Corrigido erro do método toList